# assignment-1-cloud

./: .gitignore  Procfile  README.md  nixpacks.config.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: main.yml  tests.yml
.tox/py9/: .tox-info.json
08-Testing/: README.md
add_numbers.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/: certificate_generator.py  file_processor.py
backend/static/: script.js  style.css
backend/templates/: index.html
frontend/: index.html  script.js
frontend/sketchyButton/: index.html  style.css
src/add_numbers/: add_numbers.py
tests/: test_add_numbers.py
uploads/: names.csv  names.md
