[metadata]
name = add_numbers
author = Andreas, Ola and Christopher
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9


[options]
packages = find:
python_requires = >=3.6

[options.extras_require]
testing = 
    pytest>=6.0
    mypy>=0.800
    flake8>=3.8
    tox>=3.0

[options.package_data]
    add_numbers = py.typed

[flake8]
max-line-length = 140

